--- a/src/output.css
+++ b/src/output.css
@@ -13,6 +13,8 @@
     --color-violet-600: oklch(54.1% 0.281 293.009);
     --color-gray-50: oklch(98.5% 0.002 247.839);
     --color-gray-400: oklch(70.7% 0.022 261.325);
+    --color-gray-500: oklch(55.1% 0.027 264.364);
+    --color-gray-600: oklch(44.6% 0.03 256.802);
     --color-gray-800: oklch(27.8% 0.033 256.848);
     --color-black: #000;
     --color-white: #fff;
@@ -28,6 +30,7 @@
     --font-weight-bold: 700;
     --radius-md: 0.375rem;
     --radius-lg: 0.5rem;
+    --radius-3xl: 1.5rem;
     --ease-in: cubic-bezier(0.4, 0, 1, 1);
     --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
     --default-transition-duration: 150ms;
@@ -250,6 +253,15 @@
   .top-\[102\%\] {
     top: 102%;
   }
+  .top-\[105\%\] {
+    top: 105%;
+  }
+  .top-\[110\%\] {
+    top: 110%;
+  }
+  .top-\[120\%\] {
+    top: 120%;
+  }
   .right-0 {
     right: calc(var(--spacing) * 0);
   }
@@ -319,6 +331,9 @@
   .z-\[9999999999999999999999999999\] {
     z-index: 9999999999999999999999999999;
   }
+  .z-\[99999999999999999999999999999999999\] {
+    z-index: 99999999999999999999999999999999999;
+  }
   .container {
     width: 100%;
     @media (width >= 280px) {
@@ -382,6 +397,12 @@
   .mt-auto {
     margin-top: auto;
   }
+  .mr-\[-2px\] {
+    margin-right: -2px;
+  }
+  .mr-\[-\] {
+    margin-right: -;
+  }
   .mb-\[10px\] {
     margin-bottom: 10px;
   }
@@ -414,6 +435,9 @@
   }
   .hidden\! {
     display: none !important;
+  }
+  .table {
+    display: table;
   }
   .aspect-\[1\/1\] {
     aspect-ratio: 1/1;
@@ -471,6 +495,9 @@
   }
   .h-\[44px\] {
     height: 44px;
+  }
+  .h-\[48px\] {
+    height: 48px;
   }
   .h-\[55\%\] {
     height: 55%;
@@ -574,6 +601,9 @@
   .w-\[46px\] {
     width: 46px;
   }
+  .w-\[48px\] {
+    width: 48px;
+  }
   .w-\[60px\] {
     width: 60px;
   }
@@ -631,6 +661,9 @@
   .w-full {
     width: 100%;
   }
+  .max-w-\[90px\] {
+    max-width: 90px;
+  }
   .max-w-\[100px\] {
     max-width: 100px;
   }
@@ -646,8 +679,23 @@
   .min-w-\[100px\] {
     min-width: 100px;
   }
+  .min-w-\[300px\] {
+    min-width: 300px;
+  }
+  .min-w-\[400px\] {
+    min-width: 400px;
+  }
+  .border-collapse {
+    border-collapse: collapse;
+  }
+  .origin-right {
+    transform-origin: right;
+  }
   .origin-top {
     transform-origin: top;
+  }
+  .origin-top-right {
+    transform-origin: top right;
   }
   .translate-x-0 {
     --tw-translate-x: calc(var(--spacing) * 0);
@@ -689,6 +737,12 @@
   }
   .scale-\[100\%\] {
     scale: 100%;
+  }
+  .scale-\[100\] {
+    scale: 100;
+  }
+  .scale-\[full\] {
+    scale: full;
   }
   .rotate-\[90deg\] {
     rotate: 90deg;
@@ -738,8 +792,14 @@
   .gap-\[6px\] {
     gap: 6px;
   }
+  .gap-\[10\] {
+    gap: 10;
+  }
   .gap-\[10px\] {
     gap: 10px;
+  }
+  .gap-\[12px\] {
+    gap: 12px;
   }
   .gap-\[15px\] {
     gap: 15px;
@@ -790,17 +850,26 @@
   .rounded {
     border-radius: 0.25rem;
   }
+  .rounded-3xl {
+    border-radius: var(--radius-3xl);
+  }
   .rounded-\[1px\] {
     border-radius: 1px;
   }
   .rounded-\[2px\] {
     border-radius: 2px;
   }
+  .rounded-\[3px\] {
+    border-radius: 3px;
+  }
   .rounded-\[4px\] {
     border-radius: 4px;
   }
   .rounded-\[5px\] {
     border-radius: 5px;
+  }
+  .rounded-\[6px\] {
+    border-radius: 6px;
   }
   .rounded-\[7px\] {
     border-radius: 7px;
@@ -850,6 +919,10 @@
     border-top-right-radius: 3px;
     border-bottom-right-radius: 3px;
   }
+  .rounded-b-\[3px\] {
+    border-bottom-right-radius: 3px;
+    border-bottom-left-radius: 3px;
+  }
   .rounded-b-\[15px\] {
     border-bottom-right-radius: 15px;
     border-bottom-left-radius: 15px;
@@ -877,7 +950,15 @@
     border-top-style: var(--tw-border-style);
     border-top-width: 1px;
   }
+  .border-t-\[2px\] {
+    border-top-style: var(--tw-border-style);
+    border-top-width: 2px;
+  }
   .border-b {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 1px;
+  }
+  .border-b-\[1px\] {
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 1px;
   }
@@ -915,6 +996,9 @@
   }
   .border-t-\[\#ef7b00\] {
     border-top-color: #ef7b00;
+  }
+  .border-t-or {
+    border-top-color: var(--color-or);
   }
   .border-b-\[\#ddd\] {
     border-bottom-color: #ddd;
@@ -955,6 +1039,9 @@
   .bg-\[\#ff8230\] {
     background-color: #ff8230;
   }
+  .bg-\[\#ff8300\] {
+    background-color: #ff8300;
+  }
   .bg-\[\#ffc178\] {
     background-color: #ffc178;
   }
@@ -966,6 +1053,9 @@
   }
   .bg-gray-50 {
     background-color: var(--color-gray-50);
+  }
+  .bg-gray-600 {
+    background-color: var(--color-gray-600);
   }
   .bg-or {
     background-color: var(--color-or);
@@ -991,6 +1081,9 @@
   .p-\[15px\] {
     padding: 15px;
   }
+  .p-\[16px\] {
+    padding: 16px;
+  }
   .p-\[19px\] {
     padding: 19px;
   }
@@ -999,6 +1092,9 @@
   }
   .px-3 {
     padding-inline: calc(var(--spacing) * 3);
+  }
+  .px-4 {
+    padding-inline: calc(var(--spacing) * 4);
   }
   .px-5 {
     padding-inline: calc(var(--spacing) * 5);
@@ -1053,6 +1149,9 @@
   }
   .py-\[7px\] {
     padding-block: 7px;
+  }
+  .py-\[8px\] {
+    padding-block: 8px;
   }
   .py-\[10px\] {
     padding-block: 10px;
@@ -1204,6 +1303,9 @@
   .text-nowrap {
     text-wrap: nowrap;
   }
+  .text-wrap {
+    text-wrap: wrap;
+  }
   .text-\[\#000\] {
     color: #000;
   }
@@ -1249,6 +1351,9 @@
   .text-black {
     color: var(--color-black);
   }
+  .text-gray-500 {
+    color: var(--color-gray-500);
+  }
   .text-or {
     color: var(--color-or);
   }
@@ -1289,6 +1394,9 @@
   .opacity-\[100\%\] {
     opacity: 100%;
   }
+  .opacity-\[full\] {
+    opacity: full;
+  }
   .shadow-2xl {
     --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgb(0 0 0 / 0.25));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -1299,6 +1407,10 @@
   }
   .shadow-inner {
     --tw-shadow: inset 0 2px 4px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.05));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .shadow-lg {
+    --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .shadow-navSh {
@@ -1318,6 +1430,10 @@
     @supports (color: color-mix(in lab, red, red)) {
       --tw-shadow-color: color-mix(in oklab, #7877772d var(--tw-shadow-alpha), transparent);
     }
+  }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
   }
   .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
@@ -1561,6 +1677,13 @@
     &:hover {
       @media (hover: hover) {
         background-color: #fed9be;
+      }
+    }
+  }
+  .hover\:bg-orange-400 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-orange-400);
       }
     }
   }
@@ -1819,6 +1942,21 @@
       display: none;
     }
   }
+  .max-inp\:right-\[-50px\] {
+    @media (width < 448px) {
+      right: -50px;
+    }
+  }
+  .max-inp\:right-\[-100px\] {
+    @media (width < 448px) {
+      right: -100px;
+    }
+  }
+  .max-inp\:right-\[100px\] {
+    @media (width < 448px) {
+      right: 100px;
+    }
+  }
   .max-inp\:w-\[50px\] {
     @media (width < 448px) {
       width: 50px;
@@ -1834,9 +1972,19 @@
       max-width: 100px;
     }
   }
+  .max-inp\:flex-col {
+    @media (width < 448px) {
+      flex-direction: column;
+    }
+  }
   .max-inp\:gap-\[5px\] {
     @media (width < 448px) {
       gap: 5px;
+    }
+  }
+  .max-inp\:gap-\[10px\] {
+    @media (width < 448px) {
+      gap: 10px;
     }
   }
   .max-one0\:right-\[-300px\] {
@@ -1887,6 +2035,11 @@
   .vniz\:hidden {
     @media (width >= 280px) {
       display: none;
+    }
+  }
+  .inp\:min-w-\[300px\] {
+    @media (width >= 448px) {
+      min-width: 300px;
     }
   }
   .one1\:w-\[80\%\] {
@@ -2017,6 +2170,11 @@
   .desk\:min-w-\[170px\] {
     @media (width >= 770px) {
       min-width: 170px;
+    }
+  }
+  .desk\:min-w-\[400px\] {
+    @media (width >= 770px) {
+      min-width: 400px;
     }
   }
   .desk\:grid-cols-2 {
@@ -2409,6 +2567,11 @@
   inherits: false;
   initial-value: 0 0 #0000;
 }
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
 @property --tw-blur {
   syntax: "*";
   inherits: false;
@@ -2502,6 +2665,7 @@
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
+      --tw-outline-style: solid;
       --tw-blur: initial;
       --tw-brightness: initial;
       --tw-contrast: initial;
